--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header"><h5 class="modal-title"></h5>
-                        <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close">
-                        </button>
+                        <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body text-break"></div>
                     <div class="modal-footer">
@@ -31,31 +30,32 @@
                             <div class="row"><div class="col">
                                 <div class="form-floating">
                                     <input id="url-input" autofocus="" required="" name="url" aria-label="url" class="form-control w-100" placeholder="ссылка RSS" autocomplete="off"> 
-                                    <label for="url-input">Ссылка RSS</label></div></div><div class="col-auto">
-                                        <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
-                                    </div>
+                                <label for="url-input">Ссылка RSS</label></div></div><div class="col-auto">
+                                    <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
                                 </div>
-                            </form>
-                            <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
-                            <p class="feedback m-0 position-absolute small text-danger"></p>
-                        </div>
+                            </div>
+                        </form>
+                        <p id="example" class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
+                        <p class="feedback m-0 position-absolute small text-danger"></p>
                     </div>
-                </section>
-                <section class="container-fluid container-xxl p-5">
+                </div>
+            </section>
+            <section class="container-fluid container-xxl p-5">
                     <div class="row">
                         <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
                         <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
                     </div>
-                </section>
-            </main>
-            <footer class="footer border-top py-3 mt-5 bg-light">
+            </section>
+        </main>
+        <footer class="footer border-top py-3 mt-5 bg-light">
                 <div class="container-xl">
-                    <div class="text-center">created by 
-                        <a href="https://ru.hexlet.io/professions/frontend/projects/11" target="_blank">Hexlet</a>
+                    <div class="text-center">
+                        <span id="created"></span> 
+                        <a href="https://ru.hexlet.io/professions/frontend/projects/11" target="_blank"></a>
                     </div>
                 </div>
-            </footer>
-        </body>
+        </footer>
+    </body>
     
     <script>
         if ("serviceWorker" in navigator) {
