--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                     </div>
                     <div class="modal-body text-break"></div>
                     <div class="modal-footer">
-                        <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью </a>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                        <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer"></a>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"></button>
                     </div>
                 </div>
             </div>
@@ -24,18 +24,18 @@
             <section class="container-fluid bg-dark p-5">
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-white">
-                        <h1 class="display-3 mb-0">RSS агрегатор</h1>
-                        <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
+                        <h1 class="display-3 mb-0"></h1>
+                        <p class="lead"></p>
                         <form action="" class="rss-form text-body">
                             <div class="row"><div class="col">
                                 <div class="form-floating">
                                     <input id="url-input" autofocus="" required="" name="url" aria-label="url" class="form-control w-100" placeholder="ссылка RSS" autocomplete="off"> 
-                                <label for="url-input">Ссылка RSS</label></div></div><div class="col-auto">
-                                    <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
+                                <label for="url-input"></label></div></div><div class="col-auto">
+                                    <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5"></button>
                                 </div>
                             </div>
                         </form>
-                        <p id="example" class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
+                        <p id="example" class="mt-2 mb-0 text-muted"></p>
                         <p class="feedback m-0 position-absolute small text-danger"></p>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                 <div class="container-xl">
                     <div class="text-center">
                         <span id="created"></span> 
-                        <a href="https://ru.hexlet.io/professions/frontend/projects/11" target="_blank"></a>
+                        <a href="https://github.com/AndreyCurious/frontend-project-11" target="_blank"></a>
                     </div>
                 </div>
         </footer>
